Refactor LocalFileStorageService logic and improve validation; introduce installation post upload validation tests, enable method-level security, adjust SecurityConfig rules, and enhance admin installation post controller tests.